fix layout issues, clean design #8

--- a/src/index.css
+++ b/src/index.css
@@ -60,10 +60,3 @@ h6 {
     font-size: 0.875rem;
     margin-bottom: 1rem;
 }
-
-.sideNavBar {
-    @apply z-20 block;
-    @apply overflow-y-scroll;
-    @apply py-[2rem];
-    @apply px-[0.5rem];
-}
